src/test/ui/wf/wf-fn-where-clause.stderr
error[E0277]: the trait bound `U: std::marker::Copy` is not satisfied
  --> $DIR/wf-fn-where-clause.rs:8:1
   |
LL | / fn foo<T,U>() where T: ExtraCopy<U>
LL | | {
LL | | }
   | |_^ the trait `std::marker::Copy` is not implemented for `U`
   |
   = help: consider adding a `where U: std::marker::Copy` bound
note: required by `ExtraCopy`
  --> $DIR/wf-fn-where-clause.rs:6:1
   |
LL | trait ExtraCopy<T:Copy> { }
   | ^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the size for values of type `(dyn std::marker::Copy + 'static)` cannot be known at compilation time
  --> $DIR/wf-fn-where-clause.rs:12:1
   |
LL | fn bar() where Vec<dyn Copy>:, {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `(dyn std::marker::Copy + 'static)`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: required by `std::vec::Vec`

error[E0038]: the trait `std::marker::Copy` cannot be made into an object
  --> $DIR/wf-fn-where-clause.rs:12:1
   |
LL | fn bar() where Vec<dyn Copy>:, {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::marker::Copy` cannot be made into an object
   |
   = note: the trait cannot require that `Self : Sized`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0038, E0277.
For more information about an error, try `rustc --explain E0038`.
